  unnecessary globals. (RFB)
- aes/gemshlib.c aes/gemshlib.h: Code cleanup: make sh_apdir[] local, and
  use #define for its length. (RFB)
- aes/geminit.c aes/gemwmlib.c aes/gemwmlib.h: Code cleanup: eliminate
  ad_windspb. (RFB)
- aes/geminit.c aes/gemoblib.c aes/gemoblib.h: Code cleanup: eliminate
  ad_edblk, ad_bi, ad_ib. (RFB)
- aes/geminit.c aes/gemshlib.c: Code cleanup: really make some variables
  local. (RFB)
- aes/gemctrl.c aes/gemgsxif.c aes/geminit.c aes/geminit.h: Code cleanup:
  eliminate ad_mouse. (RFB)
- aes/gemshlib.c desk/deskapp.c desk/deskapp.h desk/deskins.c desk/desksupp.c:
  Removed AF_ISFMEM, since it has no meaning when the AES is ROMmed. (RFB)
- desk/deskins.c desk/desktop.dfn desk/desktop.rsc: Removed 'use full memory'
  objects from 'Configure application' dialog. (RFB)
- desk/deskapp.c: Code cleanup: use sprintf() instead of local routines. (RFB)

2012-04-18
- po/de.po: Updated german translations. (THH)
- aes/gemfmalt.c: Changed form_alert so that dialog boxes with only one line
  of text and without icon should be formatted fine, too. (THH)
- bios/screen.c bios/screen.h bios/xbios.c: Added VsetSync(). (RFB)
- bios/screen.c bios/screen.h desk/deskapp.c: Save current rez / video mode
  to EMUDESK.INF. (RFB)

2012-04-19
- desk/deskapp.c: Fix compilation errors caused by previous update. (RFB)

2012-04-20
- aes/geminit.c: Code cleanup: fix comments, remove unused #define. (RFB)
- aes/geminit.c: Code cleanup: eliminate compatibility macros. (RFB)

2012-04-21
- aes/crysbind.h aes/gemsuper.c desk/gembind.c desk/gembind.h: Remove
  appl_bvset() [never used & not Atari TOS]. (RFB)
- aes/gemfslib.c aes/gemfslib.h: Code cleanup: made some globals local. (RFB)
- aes/gemfslib.c: Fix file selector to display complete drive list. (RFB)
- aes/gemfslib.c aes/geminit.c aes/gemsuper.c aes/gemsuper.h: Eliminate
  gl_bvdisk & gl_bvhard globals. (RFB)
- desk/desktop.rsc: Re-enabled Easter Egg (accidentally disabled when
  resource was recreated). (RFB)